<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GhanaIllegalTrawlling</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="description">Description</string>
    <string name="takePhotoButton">Take Photo</string>
    <string name="sendReportButton">Send Report</string>
    <string name="ImageViewDescription">Photograph of the trawller</string>

</resources>
